--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>carousel</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/carousel.css">
 </head>
 <body>
   <div class="carousel" data-setting='{
@@ -37,7 +37,7 @@
     <div class="arrow arrow-prev"></div>
     <div class="arrow arrow-next"></div>
   </div>
-  <script src="./js/index.js"></script>
+  <script src="./js/carousel.js"></script>
   <script>
     const c = new Carousel(document.querySelector('.carousel'))
     c.init()
