--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>carousel</title>
   <link rel="stylesheet" href="./css/carousel.css">
+  <style>
+    .carousel { margin: 0 auto; }
+  </style>
 </head>
 <body>
   <div class="carousel" data-setting='{
@@ -20,13 +23,13 @@
     "horizontalRate": 20,
     "canJump": true,
     "showArrow": true,
-    "bottom": 50,
+    "bottom": 60,
     "showCircle": true,
     "activeCircleBgColor": "red",
     "force": true
   }'>
     <ul class="carousel-ul">
-      <li class="carousel-item"><a href="#"><img src="./images/0.png" alt=""></a></li>
+      <li class="carousel-item"><a href="#"></a><img src="./images/0.png" alt=""></a></li>
       <li class="carousel-item"><a href="#"><img src="./images/1.png" alt=""></a></li>
       <li class="carousel-item"><a href="#"><img src="./images/2.png" alt=""></a></li>
       <li class="carousel-item"><a href="#"><img src="./images/3.png" alt=""></a></li>
